--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -14,6 +14,7 @@
         "type": "git",
         "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
     },
+    "main": "dist/index.js",
     "author": "Microsoft",
     "license": "MIT",
     "bugs": {
@@ -47,16 +48,15 @@
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
+        "@azure/cosmos": "^3.9.0",
         "accessibility-insights-report": "^1.0.3",
         "applicationinsights": "^1.8.0",
-        "@azure/cosmos": "^3.9.0",
         "axe-core": "^3.5.3",
         "axe-puppeteer": "^1.1.0",
         "axe-sarif-converter": "^2.1.0",
         "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
-        "esm": "^3.2.25",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
