--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -69,7 +69,8 @@
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^7.0.1",
         "table": "^5.4.6",
-        "yargs": "^15.3.1"
+        "yargs": "^15.3.1",
+        "accessibility-insights-crawler": "1.0.0"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
