--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -69,7 +69,14 @@
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^7.0.1",
         "table": "^5.4.6",
-        "yargs": "^15.3.1"
+        "yargs": "^15.3.1",
+        "@medv/finder": "^1.1.3",
+        "apify": "^0.21.3",
+        "apify-shared": "^0.2.12",
+        "cheerio": "^1.0.0-rc.3",
+        "common": "1.0.0",
+        "logger": "1.0.0",
+        "sha.js": "^2.4.11"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
