--- a/packages/crawler/.vscode/launch.json
+++ b/packages/crawler/.vscode/launch.json
@@ -15,7 +15,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "smartStep": true,
-            "args": ["--crawl", "--url", "https://beta.support.xbox.com/", "--maxUrls", "10", "--restart", "--simulate"]
+            "args": ["--crawl", "--url", "https://www.microsoft.com/en-us/", "--maxUrls", "10", "--restart", "--simulate"]
         }
     ]
 }
